UtahLiveDataTest/src/objects/BusinessObject__c.object
<CustomObject>
    <description>It contains the formula fields obsolete records</description>
    <fields>
        <fullName>ExistDataFields__c</fullName>
        <label>ExistDataFields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObsoleteCodeFields__c</fullName>
        <label>ObsoleteCodeFields</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ObsoleteDataFields__c</fullName>
        <label>ObsoleteDataFields</label>
        <length>7000</length>
        <type>LongTextArea</type>
    </fields>
    <label>BusinessObject</label>
    <nameField>
        <label>BusinessObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BusinessObjects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>